# layered_music_gen

./: .continue-here.md  .gitignore  INTEGRATION-HANDOFF.md  README.md  beat_anotator.py  beat_fx.json  beat_roll_patterns_24.txt  beat_roll_patterns_34.txt  beat_roll_patterns_44.txt  beat_roll_patterns_78.txt  beats_annotations.txt  chord_patterns.txt  chord_patterns_old.txt  config.py  demo_roteiro.md  dev-requirements.txt  enhanced_duration_validator.py  gd_upload.py  levels.json  music_gen copy.py  music_gen.py  music_gen_old.py  musicality_score.py  musicgen_musicality_audit.md  pyproject.toml  requirements.txt  song_structures.json  soundfonts.json  timesig.py  token.pickle
.github/workflows/: ci.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  (+6 more)
20250127163609544007/: 20250127163609544007-bridge-bassline.mid  20250127163609544007-bridge-beat.mid  20250127163609544007-bridge-chord_progression.mid  20250127163609544007-bridge-melody.mid  20250127163609544007-chorus-bassline.mid  20250127163609544007-chorus-beat.mid  20250127163609544007-chorus-melody.mid  20250127163609544007-intro-bassline.mid  20250127163609544007-intro-beat.mid  20250127163609544007-intro-chord_progression.mid  20250127163609544007-intro-melody.mid  20250127163609544007-outro-bassline.mid  20250127163609544007-outro-beat.mid  20250127163609544007-outro-chord_progression.mid  20250127163609544007-outro-melody.mid  20250127163609544007-verse-bassline.mid  20250127163609544007-verse-beat.mid  20250127163609544007-verse-chord_progression.mid  20250127163609544007-verse-melody.mid
benchmarks/: BENCHMARKS.md  bench.py  plot.py
binder/: apt.txt  postBuild  requirements.txt
docs/: musicality-scoring.md  neural-generators.md  sample-composition.md
eval_results/: diagnostic.csv  diagnostic.json  diagnostic_smoke.csv  diagnostic_smoke.json  diagnostic_smoke2.csv  diagnostic_smoke2.json  e1_reliability.json  e2_construct_validity.json  e2_construct_validity.tex
genres/: README.md
hf_space/: Dockerfile  README.md  app.py
notebooks/: musicgen_demo.ipynb  neural_generators.ipynb  sample_composition.ipynb
scripts/: calibrate.py  component_diagnostic.py  generate_all_genres.py  probe_integrity.py  run_construct_validity.py  run_reliability.py  verify_local.py
sf/: LICENSE.md
tests/: conftest.py  test_annotator.py  test_api.py  test_audio_indexer.py  test_batch.py  test_beat_patterns.py  test_beats.py  test_calibrate.py  test_calibration.py  test_cli.py  test_cli_genre.py  test_config.py  test_corpus_extractor.py  test_determinism_golden.py  test_duration_validator.py  test_genre.py  test_genre_presets.py  test_integration_batch.py  test_integration_full_generation.py  test_manifest.py  test_midi_indexer.py  test_mixer.py  test_music21_isolation.py  test_music_gen_logging.py  test_musicality.py  test_neural_integration.py  test_neural_model.py  test_no_bare_random_in_package.py  test_output_mode.py  test_quality_gate.py  test_renderer.py  test_renderer_genre.py  test_sampler.py  test_sampler_genre.py  test_seeds.py  test_split.py  test_time_signature.py  test_timesig_registry.py  test_writer.py
(+188 files in other folders)
