[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicgen"
version = "0.1.0"              # R-Q4
description = "Synthetic music dataset generator for ML training"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"     # RESEARCH.md Risk #1: typer>=0.12 and hatchling>=1.28 require Python 3.10+; CONTEXT.md D-13's ">=3.9" is infeasible.
authors = [{ name = "Carlos Eduardo Batista" }]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "midiutil>=1.2.1",
    "music21>=7.3.3",
    "librosa>=0.9.2",
    "pydub>=0.25.1",
    "midi2audio>=0.1.1",
    "pedalboard>=1.0.0",
    "python-json-logger>=2.0.7",
    "typing-extensions>=4.4.0",
    "numba>=0.56.4",
    "llvmlite>=0.39.1",
    "python-magic>=0.4.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
]

[project.scripts]
musicgen = "musicgen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/musicgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
