[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicgen"
version = "0.3.0"              # R-Q4
description = "Synthetic music dataset generator for ML training"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"     # RESEARCH.md Risk #1: typer>=0.12 and hatchling>=1.28 require Python 3.10+; CONTEXT.md D-13's ">=3.9" is infeasible.
authors = [{ name = "Carlos Eduardo Batista" }]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "midiutil>=1.2.1",
    "music21>=7.3.3",
    "librosa>=0.9.2",
    "pydub>=0.25.1",
    "midi2audio>=0.1.1",
    # RESEARCH correction #3: mido is NOT a transitive dep of midi2audio (which declares zero Python-level requirements); beats.py needs it for MIDI-tick extraction.
    "mido>=1.3.3",
    "pedalboard>=0.9.0",           # Rule 1 fix: requirements.txt said >=1.0.0 but no 1.x release exists on PyPI (latest 0.9.22); spec was aspirational and blocked `pip install -e .`.
    "python-json-logger>=2.0.7",
    "typing-extensions>=4.4.0",
    "numba>=0.56.4",
    "llvmlite>=0.39.1",
    "python-magic>=0.4.27",
    "typer>=0.12",
    "pyloudnorm>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
]
# pip install musicgen[samples]  — enables sample-based composition (M3/M4)
samples = [
    "audio-sample-manager @ git+https://github.com/dobidu/audio_sample_manager",
    "soundfile>=0.12.1",
    "rubberband-stretch>=0.1; platform_system != 'Windows'",
]

[project.scripts]
musicgen    = "musicgen.cli:app"
musicality  = "musicality.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/musicgen", "src/musicality"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: FluidSynth rendering tests — requires fluidsynth binary on PATH (deselect with '-m \"not slow\"')",
    "integration: end-to-end tests requiring system dependencies",
]
